src/objects/Quarter__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuarterNumber__c</fullName>
        <label>QuarterNumber</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Quarter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>QuarterNumber__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quarter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quarters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>